unpackaged/main/default/objects/Account_Management__c/Account_Management__c.object-meta.xml
<CustomObject>
    <description>Custom object that allows the creation and maintenance of various account management documents such as Opportunity Qualifier Templates, SDR Disco Notes and Account Reviews.</description>
    <label>Account Management</label>
    <nameField>
        <label>Document Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Account Management</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>