unpackaged/main/default/objects/Account_Management__c/fields/AM_Record_Count__c.field-meta.xml
<CustomField>
    <fullName>AM_Record_Count__c</fullName>
    <formula>1</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AM Record Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>