unpackaged/main/default/objects/Account_Management__c/fields/Business_Initiatives__c.field-meta.xml
<CustomField>
    <fullName>Business_Initiatives__c</fullName>
    <label>Business Initiatives</label>
    <length>32000</length>
    <type>Html</type>
</CustomField>