unpackaged/main/default/objects/Account_Management__c/fields/Business_Outcomes__c.field-meta.xml
<CustomField>
    <fullName>Business_Outcomes__c</fullName>
    <label>Business Outcomes</label>
    <length>32000</length>
    <type>Html</type>
</CustomField>