unpackaged/main/default/objects/Account_Management__c/fields/Business_Pains__c.field-meta.xml
<CustomField>
    <fullName>Business_Pains__c</fullName>
    <label>Business Pains</label>
    <length>32000</length>
    <type>Html</type>
</CustomField>