unpackaged/main/default/objects/Account_Management__c/fields/Champion__c.field-meta.xml
<CustomField>
    <fullName>Champion__c</fullName>
    <label>Champion</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>