unpackaged/main/default/objects/Account_Management__c/fields/Competition__c.field-meta.xml
<CustomField>
    <fullName>Competition__c</fullName>
    <label>Competition</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>