unpackaged/main/default/objects/Account_Management__c/fields/Competition_score_colorcoded__c.field-meta.xml
<CustomField>
    <fullName>Competition_score_colorcoded__c</fullName>
    <formula>IMAGE(
CASE(Competition_Score__c,
"2", "/img/samples/flag_green.gif",
"1", "/img/samples/flag_yellow.gif",
"0", "/img/samples/flag_red.gif",
"/s.gif"),
"score color")</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Competition</label>
    <type>Text</type>
</CustomField>