unpackaged/main/default/objects/Account_Management__c/fields/Critical_Next_Steps__c.field-meta.xml
<CustomField>
    <fullName>Critical_Next_Steps__c</fullName>
    <label>Critical Next Steps</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>