unpackaged/main/default/objects/Account_Management__c/fields/Current_State_Negative_Consequences__c.field-meta.xml
<CustomField>
    <fullName>Current_State_Negative_Consequences__c</fullName>
    <label>Current State &amp; Negative Consequences</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>