unpackaged/main/default/objects/Account_Management__c/fields/Decision_Criteria__c.field-meta.xml
<CustomField>
    <fullName>Decision_Criteria__c</fullName>
    <label>Decision Criteria</label>
    <length>32000</length>
    <type>Html</type>
</CustomField>