unpackaged/main/default/objects/Account_Management__c/fields/Decision_Process__c.field-meta.xml
<CustomField>
    <fullName>Decision_Process__c</fullName>
    <label>Decision Process</label>
    <length>32000</length>
    <type>Html</type>
</CustomField>