unpackaged/main/default/objects/Account_Management__c/fields/Economic_Buyer__c.field-meta.xml
<CustomField>
    <fullName>Economic_Buyer__c</fullName>
    <label>Economic Buyer</label>
    <length>32000</length>
    <type>Html</type>
</CustomField>