unpackaged/main/default/objects/Account_Management__c/fields/Financial_Criteria__c.field-meta.xml
<CustomField>
    <fullName>Financial_Criteria__c</fullName>
    <label>Financial Criteria</label>
    <length>32000</length>
    <type>Html</type>
</CustomField>