unpackaged/main/default/objects/Account_Management__c/fields/Identified_Pain__c.field-meta.xml
<CustomField>
    <fullName>Identified_Pain__c</fullName>
    <label>Identified Pain</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>