unpackaged/main/default/objects/Account_Management__c/fields/Key_Differentiators__c.field-meta.xml
<CustomField>
    <fullName>Key_Differentiators__c</fullName>
    <label>Key Differentiators</label>
    <length>32000</length>
    <type>Html</type>
</CustomField>