unpackaged/main/default/objects/Account_Management__c/fields/Key_Integration_Technologies__c.field-meta.xml
<CustomField>
    <fullName>Key_Integration_Technologies__c</fullName>
    <label>Key Integration Technologies</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>