unpackaged/main/default/objects/Account_Management__c/fields/Known_Qualification_Gaps_and_Challenges__c.field-meta.xml
<CustomField>
    <fullName>Known_Qualification_Gaps_and_Challenges__c</fullName>
    <label>Known Qualification Gaps and Challenges</label>
    <length>32000</length>
    <type>Html</type>
</CustomField>