unpackaged/main/default/objects/Account_Management__c/fields/MEDDPICC_Total_Score__c.field-meta.xml
<CustomField>
    <fullName>MEDDPICC_Total_Score__c</fullName>
    <formula>(VALUE(TEXT( Champion_Score__c ))*1.65) + VALUE(TEXT( Competition_Score__c )) + VALUE(TEXT( Decision_Criteria_Score__c )) + VALUE(TEXT( Decision_Process_Score__c )) + (VALUE(TEXT( Economic_Buyer_Score__c ))*1.65) + (VALUE(TEXT( Identified_Pain_Score__c ))*1.65) + VALUE(TEXT( Metrics_Score__c )) + VALUE(TEXT( Paper_Process_Score__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>MEDDPICC Total Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>