unpackaged/main/default/objects/Account_Management__c/fields/Metrics__c.field-meta.xml
<CustomField>
    <fullName>Metrics__c</fullName>
    <label>Metrics</label>
    <length>32000</length>
    <type>Html</type>
</CustomField>