unpackaged/main/default/objects/Account_Management__c/fields/Metrics_Score__c.field-meta.xml
<CustomField>
    <fullName>Metrics_Score__c</fullName>
    <label>Metrics Score</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>