unpackaged/main/default/objects/Account_Management__c/fields/Most_effective_collateral__c.field-meta.xml
<CustomField>
    <fullName>Most_effective_collateral__c</fullName>
    <label>Most effective collateral</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>