unpackaged/main/default/objects/Account_Management__c/fields/NACV__c.field-meta.xml
<CustomField>
    <fullName>NACV__c</fullName>
    <formula>Opportunity__r.ACV_Synced_Quote__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NACV</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>