unpackaged/main/default/objects/Account_Management__c/fields/Opportunity_Description__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_Description__c</fullName>
    <label>Opportunity Description</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>