unpackaged/main/default/objects/Account_Management__c/fields/Paper_Process__c.field-meta.xml
<CustomField>
    <fullName>Paper_Process__c</fullName>
    <label>Paper Process</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>