unpackaged/main/default/objects/Account_Management__c/fields/Paper_Process_Score__c.field-meta.xml
<CustomField>
    <fullName>Paper_Process_Score__c</fullName>
    <label>Paper Process Score</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>0</fullName>
            </value>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>