unpackaged/main/default/objects/Account_Management__c/fields/Potential_Next_Sales_Plays__c.field-meta.xml
<CustomField>
    <fullName>Potential_Next_Sales_Plays__c</fullName>
    <label>Potential Next Sales Plays</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>