unpackaged/main/default/objects/Account_Management__c/fields/POV_Justification__c.field-meta.xml
<CustomField>
    <fullName>POV_Justification__c</fullName>
    <inlineHelpText>if applicable</inlineHelpText>
    <label>POV Justification</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>