unpackaged/main/default/objects/Account_Management__c/fields/Primary_concerns_with_architecture__c.field-meta.xml
<CustomField>
    <fullName>Primary_concerns_with_architecture__c</fullName>
    <inlineHelpText>what are the primary concerns with their current or previous O11y Architecture?</inlineHelpText>
    <label>Primary concerns with architecture?</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>