unpackaged/main/default/objects/Account_Management__c/fields/Product_Sizing_Calculator__c.field-meta.xml
<CustomField>
    <fullName>Product_Sizing_Calculator__c</fullName>
    <description>Link to Product Sizing Calculator document</description>
    <inlineHelpText>Link to Product Sizing Calculator document</inlineHelpText>
    <label>Product Sizing Calculator</label>
    <type>TextArea</type>
</CustomField>