unpackaged/main/default/objects/Account_Management__c/fields/Products_and_sizing__c.field-meta.xml
<CustomField>
    <fullName>Products_and_sizing__c</fullName>
    <label>Products and sizing</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>