unpackaged/main/default/objects/Account_Management__c/fields/Relevant_Proof_Points__c.field-meta.xml
<CustomField>
    <fullName>Relevant_Proof_Points__c</fullName>
    <label>Relevant Proof Points</label>
    <length>32000</length>
    <type>Html</type>
</CustomField>