unpackaged/main/default/objects/Account_Management__c/fields/Required_Capabilities__c.field-meta.xml
<CustomField>
    <fullName>Required_Capabilities__c</fullName>
    <label>Required Capabilities</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>