unpackaged/main/default/objects/Account_Management__c/fields/Sales_Play__c.field-meta.xml
<CustomField>
    <fullName>Sales_Play__c</fullName>
    <formula>TEXT(Opportunity__r.Sales_Play__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales Play</label>
    <type>Text</type>
</CustomField>