unpackaged/main/default/objects/Account_Management__c/fields/Sales_Stage__c.field-meta.xml
<CustomField>
    <fullName>Sales_Stage__c</fullName>
    <formula>TEXT( Opportunity__r.StageName )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Sales Stage</label>
    <type>Text</type>
</CustomField>