unpackaged/main/default/objects/Account_Management__c/fields/Seller_Name__c.field-meta.xml
<CustomField>
    <fullName>Seller_Name__c</fullName>
    <formula>Opportunity__r.Opportunity_Owner_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Seller Name</label>
    <type>Text</type>
</CustomField>