unpackaged/main/default/objects/Account_Management__c/fields/Size_of_Technical_Pain__c.field-meta.xml
<CustomField>
    <fullName>Size_of_Technical_Pain__c</fullName>
    <label>Size of Technical Pain ($)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>