unpackaged/main/default/objects/Account_Management__c/fields/Solution_Overview__c.field-meta.xml
<CustomField>
    <fullName>Solution_Overview__c</fullName>
    <label>Solution Overview</label>
    <length>32000</length>
    <type>Html</type>
</CustomField>