unpackaged/main/default/objects/Account_Management__c/fields/Success_Metrics__c.field-meta.xml
<CustomField>
    <fullName>Success_Metrics__c</fullName>
    <label>Success Metrics</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>