unpackaged/main/default/objects/Account_Management__c/fields/Technical_Criteria__c.field-meta.xml
<CustomField>
    <fullName>Technical_Criteria__c</fullName>
    <label>Technical Criteria</label>
    <length>32000</length>
    <type>Html</type>
</CustomField>