unpackaged/main/default/objects/Account_Management__c/fields/Technical_Pains__c.field-meta.xml
<CustomField>
    <fullName>Technical_Pains__c</fullName>
    <label>Technical Pains</label>
    <length>32000</length>
    <type>Html</type>
</CustomField>