unpackaged/main/default/objects/Account_Management__c/fields/Who_is_Impacted_Business__c.field-meta.xml
<CustomField>
    <fullName>Who_is_Impacted_Business__c</fullName>
    <label>Who is Impacted?</label>
    <type>TextArea</type>
</CustomField>