unpackaged/main/default/objects/Account_Management__c/recordTypes/Opportunity_Qualifier_Template.recordType-meta.xml
<RecordType>
    <fullName>Opportunity_Qualifier_Template</fullName>
    <active>true</active>
    <description>Template used for QBR's and opportunity qualification tracking</description>
    <label>Opportunity Qualifier Template</label>
</RecordType>